@@ -7,6 +7,7 @@ Version 1.2.7:
 	Fixed problem with default style causing table to have size tags wrapped around them
 	Fixed dropdowns being hidden behind YouTube videos
 	Fixed empty tables being inserted if columns and rows are set to 0
+	Changed so that when enter is pressed on code or quotes a new line is always inserted
 
 Version 1.2.6:
 	Added i18n support
